--- a/Views/Block/Left-Sidebar.ejs
+++ b/Views/Block/Left-Sidebar.ejs
@@ -67,7 +67,7 @@
         </a>
         <ul class="nav-sub">
           <li class="nav-item"><a href="./chart/statistical_price" class="nav-link">Giá Sản Phẩm</a></li>
-          <li class="nav-item"><a href="./chart" class="nav-link">Sản Phẩm Yêu Thích</a></li>
+          <li class="nav-item"><a href="./chart/statistical_favorite" class="nav-link">Sản Phẩm Yêu Thích</a></li>
           <li class="nav-item"><a href="./chart" class="nav-link">Số Lượng User Thành Viên</a></li>
 
           <li class="nav-item"><a href="./chart" class="nav-link">Số Hóa Đơn</a></li><!-- user nào mua hàng nhiều nhất,  --> 
