--- a/Views/Pages/Add_Product.ejs
+++ b/Views/Pages/Add_Product.ejs
@@ -124,7 +124,7 @@
                                             <label for="image">
                                                 Chọn Hình Ảnh:
                                             </label>
-                                                <input type="file" class="form-control" name="image">
+                                                <input type="file" class="form-control" name="image" required>
                                         </div>
                                         <div class="form-group">
                                                 <label for="name">
