--- a/Views/Pages/Edit_Order.ejs
+++ b/Views/Pages/Edit_Order.ejs
@@ -50,7 +50,7 @@
                               <div class="col-md-12">
                                  
                                   <div class="form-group">
-                                      <select  id="myDropDown" class="form-control selectpicker btn btn-danger" style="width: 280px;font-size: 32px;padding-left: 61px;margin-left:255px;padding-top: 0px;
+                                      <select  id="myDropDown" class="form-control selectpicker btn btn-success" style="width: 280px;font-size: 32px;padding-left: 61px;margin-left:255px;padding-top: 0px;
                                       padding-bottom: 0px;" name="statuss">
                                         
 
@@ -59,6 +59,7 @@
                                             <% if( list.status ){ %> selected <% }else {%> "" <% }%> >
                                             <%=list.status%>
                                             </option>
+                                            
                                             <option value="Đang giao">
                                                 Đang giao
                                             </option>
