--- a/Views/Pages/Add_Feedback.ejs
+++ b/Views/Pages/Add_Feedback.ejs
@@ -49,6 +49,9 @@
 
 
                     </div>
+                    <div class="form-group">
+                      <input type="number" name="rating" min="1" max="6" class="form-control">
+                    </div>
 
 
                     <div class="form-group">
