--- a/Views/Pages/Feedback_List.ejs
+++ b/Views/Pages/Feedback_List.ejs
@@ -40,7 +40,7 @@
 
 
       })
-      db.collection('Feedback').get()
+      db.collection('Feedback').orderBy('date','desc').get()
         .then(snapshot => {
           snapshot.forEach(doc => {
             var element = doc.data()
