--- a/Views/Pages/Order_List.ejs
+++ b/Views/Pages/Order_List.ejs
@@ -119,9 +119,9 @@ db.collection("Receipt")
                         <div class="form-group">
                                 <label class="control-label" style="font-weight: bold; margin-left: 16px;font-family: cursive;color: red;font-size: 17px;">Số Sản Phẩm Đã Mua(`+ element.totalPro+ `):<span class="required"></span>
                                 </label>
-                                <div  class="col-md-9 col-sm-9 col-xs-12">
-                                  <textarea rows="4" cols="50" style="width: 400px;color: black;background: antiquewhite;" disabled class="form-control" value=""><%=arr.proID%></textarea>
-                                  <%}%>
+                             
+                                  <textarea rows="4" cols="50" style="width: 400px;color: black;background: antiquewhite;" disabled class="form-control" value="">`+ element.orders+ `</textarea>
+                               
                                   
                                 </div>
                         </div>
