--- a/Views/Pages/Add_Group_Product.ejs
+++ b/Views/Pages/Add_Group_Product.ejs
@@ -30,7 +30,7 @@
                                   </div>
                                   
                                   <div class="form-group">
-                                    <input style="padding: 2px;padding-top: 9px;" type="file" class="form-control"  name="image"  />
+                                    <input style="padding: 2px;padding-top: 9px;" type="file" class="form-control"  name="image" required  />
                                 </div>
                             
                                
