--- a/Views/Pages/Categories_List.ejs
+++ b/Views/Pages/Categories_List.ejs
@@ -38,7 +38,7 @@ db.collection("Category")
 
 
   })
-  db.collection('Category').get()
+  db.collection('Category').orderBy('time','desc').get()
     .then(snapshot => {
       snapshot.forEach(doc => {
         var element = doc.data()
