--- a/Views/Pages/Admin_List.ejs
+++ b/Views/Pages/Admin_List.ejs
@@ -32,7 +32,7 @@ var HTML="";
 db.collection("Admin")
 .onSnapshot(function (doc) {
 
-  db.collection('Admin').get()
+  db.collection('Admin').orderBy('Time','desc').get()
     .then(snapshot => {
       snapshot.forEach(doc => {
         var element = doc.data()
