--- a/Views/Pages/Statistical_Price.ejs
+++ b/Views/Pages/Statistical_Price.ejs
@@ -62,7 +62,7 @@
 
                     let mychart1 = document.getElementById('mychart').getContext('2d')
                     var html = `
-                    Thống Kê Doanh Thu
+                    THỐNG KÊ GIÁ SẢN PHẨM
                          `
                     let barchart = new Chart(mychart1, {
                         type: 'bar',
@@ -80,6 +80,17 @@
 
                                 backgroundColor: [
                                     'rgba(255,99,132,0.6)',
+                                    'rgba(45,162,235,0.6)',
+                                    'rgba(20,206,86,0.6)',
+                                    'rgba(255,99,86,0.6)',
+                                    'rgba(255,99,132,0.6)',
+                                    'rgba(45,162,235,0.6)',
+                                    'rgba(20,206,86,0.6)',
+                                    'rgba(255,99,86,0.6)',
+                                    'rgba(255,99,132,0.6)',
+                                    'rgba(45,162,235,0.6)',
+                                    'rgba(20,206,86,0.6)',
+                                    'rgba(255,99,86,0.6)','rgba(255,99,132,0.6)',
                                     'rgba(45,162,235,0.6)',
                                     'rgba(20,206,86,0.6)',
                                     'rgba(255,99,86,0.6)'
