--- a/Views/Pages/Statistical_Receipt.ejs
+++ b/Views/Pages/Statistical_Receipt.ejs
@@ -11,6 +11,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
+
     <title>test chart</title>
 </head>
 
@@ -19,7 +20,9 @@
         <canvas id="mychart" width="600" height="250" style=" margin-top: 84px;">
 
         </canvas>
-       
+        <canvas id="mychart1">
+
+        </canvas>
     </div>
 
     <script>
@@ -37,55 +40,95 @@
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
         const db = firebase.firestore(firebase)
-            let list =[]
-            let listname=[]
-            let listprice=[]
-            db.collection("Receipt")
-            .onSnapshot(function (doc) {
-                db.collection("Receipt").get().then(snapshot => {
+
+
+        db.collection("Receipt")
+            .onSnapshot(async function (doc) {
+                let listreceipt = []
+                await db.collection("Receipt").get().then(snapshot => {
                     snapshot.forEach(doc => {
-                        list.push(doc.data())//feedback
+                        listreceipt.push(doc.data())//feedback
 
                     })
-                    list.forEach(arr=>{
-                        listname.push(arr.status),
-                        listprice.push(arr.totalPrice)
+                })
+                let listprice = []
+                let liststatus = []
+                await listreceipt.forEach((arr) => {
+                    listprice.push(arr.totalPrice)
+                    liststatus.push(arr.status)
+                })
 
-                    })
+
+                let listproduct = async function () {
+                    const listprobyID = []
+                    for (var i = 0; i < listproID.length; i++) {
+                        await db.collection('Product')
+                            .where('proID', '==', listproID[i])
+                            .get().then(snapshot => {
+                                if (snapshot.empty) {
+                                    console.log("No document")
+                                }
+                                snapshot.forEach(doc => {
+                                    this.listprobyID = []
+                                    listprobyID.push(doc.data())
+                                })
+                                return;
+
+                            })
+
+                    }
+                    return listprobyID
+
+                }
 
             
-       
-        let mychart1 = document.getElementById('mychart').getContext('2d')
-        let myChart = new Chart(mychart1, {
-            type: 'bar',
-            data: {
-                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                datasets: [{
-                    label: '# of Votes',
-                    data:100,
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-         
-        });
-    })
-    })
 
+                var ctx = document.getElementById('mychart').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: liststatus,
+                        datasets: [{
+                            barPercentage: 0.5,
+                            barThickness: 6,
+                            maxBarThickness: 8,
+                            minBarLength: 2,
+                            label: 'THỐNG KÊ THEO HÓA ĐƠN',
+                            data: listprice,
+                            pointBackgroundColor: 'rgba(255,99,132,0.6)',
+
+                            backgroundColor: [
+                                'rgba(255,99,132,0.6)',
+                                'rgba(45,162,235,0.6)',
+                                'rgba(20,206,86,0.6)',
+                                'rgba(255,99,86,0.6)'
+                            ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+
+                            ],
+                            borderWidth: 4,
+                            borderColor: '#777',
+                            hoverBorderWidth: 3,
+                            hoverBorderColor: '#000'
+                        }]
+                    },
+                    options: {
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        // Include a dollar sign in the ticks
+                                        callback: function (value, index, values) {
+                                            return value + " (VND)";
+                                        }
+                                    }
+                                }]
+                            }
+                        }
+                });
+            })
     </script>
     <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
