--- a/Views/Pages/Edit_Order.ejs
+++ b/Views/Pages/Edit_Order.ejs
@@ -43,7 +43,7 @@
               <div class="tab-content" id="myTabContent" style="margin-right: -5px;">
                   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                      
-                     <form action="./editorder/<%=list.receiptID%>" method="post">
+                     <form action="./editorder/<%=list.receiptID%>" method="POST">
                           <div class="row register-form" style="margin-left: 197px;
                           margin-top: 36px;">
                         
