--- a/Views/Pages/Product_List.ejs
+++ b/Views/Pages/Product_List.ejs
@@ -172,6 +172,15 @@ db.collection("Product")
       <option value="100">100</option>
   </select>
 </div>
+<div>
+  <form action="./searchresult" method="GET">
+    <div class="form-group">
+
+      <input type="text" name="key" id="key" class="form-control" style="width: 300px;">
+      <button type="submit" class="btn btn-success">Tìm Kiếm</button>
+    </div>
+  </form>
+</div>
 <table class="table table-srtriped table-bordered table-hover" id="mytable">
 <thead>
   <tr role="row" style="background-color: lightslategrey; color: lightyellow;">
