--- a/Views/Pages/test_pagination.ejs
+++ b/Views/Pages/test_pagination.ejs
@@ -48,7 +48,7 @@
                                     <img src="./Upload/<%=arr.url%>" class="wd-70 rounded-circle" alt="Image">
                                 </center> 
                                 </th>
-                                <td style="width: 130px;text-align: center;padding-top: 33px;color: black;"><%=arr.id%></td>
+                                <td style="width: 130px;text-align: center;padding-top: 33px;color: black;"><%=arr.name%></td>
                               
                                 <td style="width: 130px;text-align: center;padding-top: 33px;color: black;" ><%=arr.AcFullName%></td>
                                 <td style="width: 130px;text-align: center;padding-top: 33px;color: black;"><%=arr.Phone%></td>
